Fri Oct 18 14:59:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml src/odbc/connectparams.c src/odbc/odbc.c:
	- added SQLSetConnectAttr function
	- added some DSN configuration options

Fri Oct 18 11:32:40 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml include/tds.h include/tdsstring.h:
	* src/odbc/connectparams.c src/odbc/connectparams.h:
	* src/odbc/odbc.c src/tds/config.c src/tds/mem.c:
	* src/tds/tdsstring.c:
	- ODBC: implemented DSNless and freetds.conf'less connections

Fri Oct 18 00:35:48 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsstring.h src/tds/config.c src/tds/login.c:
	* src/tds/mem.c:
	- more consistency in TDSCONNECTINFO

Thu Oct 17 22:44:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/dblib.c src/odbc/odbc.c src/pool/member.c:
	* src/tds/config.c src/tds/login.c src/tds/unittests/common.c:
	- tds_connect accept a TDSCONNECTINFO instead of TDSLOGIN

Thu Oct 17 22:44:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tds_configs.h include/tdsutil.h:
	* src/tds/config.c src/tds/login.c src/tds/mem.c:
	- renamed TDSCONFIGINFO to TDSCONNECTINFO

Thu Oct 17 16:31:56 EDT 2002    nsc <Nicholas_Castellano@acml.com>
	* doc/faq.html:
	- Small grammar fix.

Thu Oct 17 21:43:43 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am include/tds.h include/tdssrv.h:
	* src/server/login.c src/tds/Makefile.am src/tds/config.c:
	* src/tds/login.c src/tds/mem.c:
	* include/tdsstring.h(added) src/tds/tdsstring.c(added):
	- used dynamic string in login structure

Thu Oct 17 14:54:44 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0022.c:
	- If no output parameters are received and TDS 7 or TDS 8
	  is being used, print a warning and exit with success.
	  Temporary workaround for a bug introduced in SQL 7.0 SP3.
