@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.64 2002/10/17 13:58:52 castellano Exp $
+dnl $Id: configure.in,v 1.65 2002/10/18 15:34:46 castellano Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -182,7 +182,7 @@ AC_C_BIGENDIAN
 dnl ------------------------------------------------------------
 dnl Checks for library functions.
 dnl ------------------------------------------------------------
-AC_CHECK_FUNCS(vsnprintf gettimeofday gethostname)
+AC_CHECK_FUNCS(vsnprintf gettimeofday gethostname sethostent_r gethostent_r)
 AC_REPLACE_FUNCS(asprintf vasprintf atoll strtok_r)
 
 dnl ------------------------------------------------------------
