@@ -1,3 +1,9 @@
+Fri Oct 18 11:31:39 EDT 2002	nsc <Nicholas_Castellano@acml.com>
+	* configure.in src/tds/threadsafe.c:
+	- Properly initialize hostent_data structures.
+	- Wrap use of these structures in sethostent_r()/endhostent_r() 
+	  for safety.
+
 Fri Oct 18 14:59:06 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* doc/userguide.sgml src/odbc/connectparams.c src/odbc/odbc.c:
 	- added SQLSetConnectAttr function
